2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/event.c (event_release): Abort the main_loop is there is
	  no more event

2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/debug.c: Fix race in getting the thread id

2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/device.h (property_set_ex, device_property_set_ex):
	  Change prototype to return a (char *).
	* device-src/device.c (property_set_ex, device_property_set_ex):
	  Return a (char *) on error, NULL on success.
	* perl/Amanda/Device.swg (property_set), Return a string on eror,
	  undef on success.
	* device-src/amtapetype.pl, device-src/rait-device.c,
	  perl/Amanda/Changer.pm, perl/Amanda/Changer/disk.pm,
	  perl/Amanda/Changer/diskflat.pm, server-src/amadmin.c,
	  server-src/amrestore.pl: Change for new API
	* installcheck/Amanda_Device.pl: Test new API
	* installcheck/Amanda_Xfer.pl: Change for new API

2016-07-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/infofile.c: Make sure the infofile never have more more
	  than 100 history lines

2016-07-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Rest.pm (post): Set CURLOPT_POSTFIELDSIZE

2016-07-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add message in NO-ROOM from chunker and ABORT from driver to chunker
	* perl/Amanda/Chunker/Controller.pm: Add message
	* perl/Amanda/Chunker/Protocol.pm: Add message
	* server-src/driver.c: Add message
	* server-src/driverio.c: Send message
	* server-src/xfer-dest-holding.c: Set message
	* installcheck/chunker.pl: Check message

2016-07-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix dealing with try, fix line spacing
	* perl/Amanda/Report.pm: Fix setting try
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl,
	  installcheck/success-dumper-chunker+taper-flush.pl,
	  installcheck/success-dumper-chunker-2taper-by-level.pl,