@@ -1,4 +1,8 @@
 2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/file.c (debug_areads): Add a terminating '\n' on the
+	  buffer
+
+2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/event.c (event_release): Abort the main_loop is there is
 	  no more event
 
